--- a/web/grades.xhtml
+++ b/web/grades.xhtml
@@ -1,12 +1,29 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:pe="http://primefaces.org/ui/extensions">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Study Scheduler</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <ui:composition template="template/main.xhtml">
+            <ui:define name="content">
+                <p:dataTable var="course" value="#{courseBean.courses}" style="width: 50%; margin: 0 auto">
+                    <p:column headerText="Name">
+                        <h:outputText value="#{course.name}" />
+                    </p:column>
+                    <p:column headerText="Priority">
+                        <h:outputText value="#{course.priority}" />
+                    </p:column>
+                    <p:column headerText="GPA">
+                        <h:outputText value="#{course.gpa}" />
+                    </p:column>
+                </p:dataTable>
+            </ui:define>
+        </ui:composition>
     </h:body>
 </html>
-
