--- a/web/user/study.xhtml
+++ b/web/user/study.xhtml
@@ -10,6 +10,9 @@
         <title>Study Scheduler</title>
     </h:head>
     <h:body>
-
+        <ui:composition template="/resources/template/user-main.xhtml">
+            <ui:define name="content">
+            </ui:define>
+        </ui:composition>
     </h:body>
 </html>
