--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -4,15 +4,14 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Study Scheduler</title>
     </h:head>
     <h:body>
-        <ui:composition template="template/main.xhtml">
+        <ui:composition template="/resources/template/main.xhtml">
             <ui:define name="content">
-                <p:panelGrid style="width: 50%; margin: 0 auto">
+                <p:panelGrid styleClass="inner-content">
                     <f:facet name="header">
                         <p:row>
                             <p:column styleClass="ui-widget-header">ID</p:column>
