--- a/web/user/grades.xhtml
+++ b/web/user/grades.xhtml
@@ -2,18 +2,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Study Scheduler</title>
     </h:head>
     <h:body>
-        <ui:composition template="template/main.xhtml">
+        <ui:composition template="/resources/template/user-main.xhtml">
             <ui:define name="content">
                 <p:dataTable var="course" value="#{courseBean.courses}"
-                             style="width: 50%; margin: 0 auto">
+                             style="text-align: center"
+                             styleClass="inner-content">
                     <p:column headerText="Name">
                         <h:outputText value="#{course.name}" />
                     </p:column>
