--- a/web/user/timeline.xhtml
+++ b/web/user/timeline.xhtml
@@ -2,7 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:pe="http://primefaces.org/ui/extensions">
@@ -10,7 +9,7 @@
         <title>Study Scheduler</title>
     </h:head>
     <h:body>
-        <ui:composition template="template/main.xhtml">
+        <ui:composition template="/resources/template/user-main.xhtml">
             <ui:define name="content">
                 <h:form>
                     <p:growl id="growl" showSummary="true" showDetail="true" autoUpdate="true"/>
