--- a/web/user/schedule/classes.xhtml
+++ b/web/user/schedule/classes.xhtml
@@ -7,9 +7,9 @@
       xmlns:p="http://primefaces.org/ui">
     <ui:composition template="/resources/template/schedule-home.xhtml">
         <ui:define name="title">
-            <title>Schedule - All</title>
+            <title>Schedule - Classes</title>
         </ui:define>
-        <ui:param name="scheduleEventModel" value="#{scheduleBean.eventModel}"/>
+        <ui:param name="scheduleEventModel" value="#{scheduleBean.classModel}"/>
     </ui:composition>
 </html>
 
