Getting ready to ditch EJB

--- a/web/user/home/classes.xhtml
+++ b/web/user/home/classes.xhtml
@@ -14,6 +14,7 @@
 
                 <ui:define name="content">
                     <h:form>
+                        
                         <p:contextMenu for="courses">
                             <p:menuitem value="Edit" update="courseEditDetail" icon="ui-icon-search" oncomplete="PF('courseEditDialog').show()"/>
                             <p:menuitem value="Delete" update="courses" icon="ui-icon-close" actionListener="#{courseBean.deleteSelectedCourse}" immediate="true" ajax="false"/>
@@ -27,12 +28,13 @@
                             </f:facet>
                         </p:toolbar>
 
-                        <p:dataTable id="courses" var="course" value="#{userBean.user.coursesList}"
+                        <p:dataTable id="courses" var="course" value="#{courseBean.courses}"
                                      style="text-align: center; margin-top: 10px"
                                      rowKey="#{course.id}"
                                      selection="#{courseBean.selectedCourse}"
                                      styleClass="inner-content">
                             <p:column headerText="Choice" selectionMode="single"/>
+
                             <p:column headerText="Name">
                                 <h:outputText value="#{course.name}" />
                             </p:column>
