--- a/web/user/home/exams.xhtml
+++ b/web/user/home/exams.xhtml
@@ -5,46 +5,44 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Exams</title>
-    </h:head>
-    <h:body>
-        <ui:composition template="/resources/template/user-home.xhtml">
-            <ui:define name="content">
-                <h:form>
-                    <p:toolbar styleClass="header">
-                        <f:facet name="left">
-                            <p:commandButton type="button" value="Add Exam" onclick="PF('examAddDialog').show()"/>
-                            <p:commandButton type="button" value="Edit Exam" onclick="PF('examEditDialog').show()"/>
-                            <p:commandButton type="submit" value="Delete Exam" actionListener="#{examBean.deleteSelectedExam}" immediate="true" ajax="false"/>
-                        </f:facet>
-                    </p:toolbar>
 
-                    <p:dataTable var="exam" value="#{examBean.exams}"
-                                 style="text-align: center; margin-top: 10px"
-                                 selection="#{examBean.selectedExam}"
-                                 selectionMode="single"
-                                 rowKey="#{exam.examsPK}"
-                                 styleClass="inner-content">
-                        <p:column headerText="Course Name">
-                            <h:outputText value="#{exam.courses.name}"/>                            
-                        </p:column>
-                        <p:column headerText="Event Name">
-                            <h:outputText value="#{exam.events.name}"/>
-                        </p:column>
-                        <p:column headerText="Weight">
-                            <h:outputText value="#{exam.weight}"/>
-                        </p:column>
-                        <p:column headerText="Grade">
-                            <h:outputText value="#{exam.grade}"/>
-                        </p:column>
-                        <p:column headerText="Date">
-                            <h:outputText value="#{exam.events.startdate}"/>
-                        </p:column>
+    <ui:composition template="/resources/template/user-home.xhtml">
+        <ui:define name="title">
+            <title>Exams</title>
+        </ui:define>
+        <ui:define name="content">
+            <p:toolbar styleClass="header">
+                <f:facet name="left">
+                    <p:commandButton type="button" value="Add Exam" onclick="PF('examAddDialog').show()"/>
+                    <p:commandButton type="button" value="Edit Exam" onclick="PF('examEditDialog').show()"/>
+                    <p:commandButton type="submit" value="Delete Exam" actionListener="#{examBean.deleteSelectedExam}" immediate="true" ajax="false"/>
+                </f:facet>
+            </p:toolbar>
 
-                    </p:dataTable>
-                </h:form>
-            </ui:define>
-        </ui:composition>
-    </h:body>
+            <p:dataTable var="exam" value="#{examBean.exams}"
+                         binding="#{examBean.examDataTable}"
+                         style="text-align: center; margin-top: 10px"
+                         selection="#{examBean.selectedExam}"
+                         selectionMode="single"
+                         rowKey="#{exam.examsPK}"
+                         styleClass="inner-content">
+                <p:column headerText="Course Name">
+                    <h:outputText value="#{exam.courses.name}"/>                            
+                </p:column>
+                <p:column headerText="Event Name">
+                    <h:outputText value="#{exam.events.name}"/>
+                </p:column>
+                <p:column headerText="Weight">
+                    <h:outputText value="#{exam.weight}"/>
+                </p:column>
+                <p:column headerText="Grade">
+                    <h:outputText value="#{exam.grade}"/>
+                </p:column>
+                <p:column headerText="Date">
+                    <h:outputText value="#{exam.events.startdate}"/>
+                </p:column>
+            </p:dataTable>
+        </ui:define>
+    </ui:composition>
+</h:body>
 </html>
